# Insight_Extractor

./: AGENTS.md  CLAUDE.md  README.md  constraints.txt  junit-unit-3.12.xml  pyproject.toml  requirements.txt
.claude/commands/: insight-optimize.md
.claude/skills/add-entity-pattern/: SKILL.md
.claude/skills/deps-security-refresh/: SKILL.md
.claude/skills/insight-optimize/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/verify-no-model/: SKILL.md
.codex/: AGENTS.md  README.md  codex_custom_instructions.md  ponytail-plugin.json
.codex/skills/add-entity-pattern/: SKILL.md
.codex/skills/optimize/: SKILL.md
.codex/skills/preflight/: SKILL.md
.codex/skills/verify-no-model/: SKILL.md
.github/workflows/: ci.yml  gitleaks.yml
docs/: SECURITY_AUDIT.md  SPEC.md  ai_thread.txt  insight_extractor.py  insight_keywords.txt
docs/scripts/: ai-insights.md  ai_thread.txt  insight_keywords.txt
src/: sample_extracted_insights.md  sample_input.txt
src/insight_extractor/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  extractor.py  models.py  stemmer.py  tokenizer.py  utils.py
tests/: conftest.py
tests/integration/: test_e2e.py  test_extractor.py
tests/unit/: test_exceptions.py  test_extractor.py  test_models.py  test_stemmer.py  test_tokenizer.py  test_utils.py
