[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insight-extractor"
version = "2.0.0"
description = "BERT + regex insight extractor with dynamic keyword stemmer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Insight Extractor Team" },
]
keywords = [
    "bert",
    "keyword-extraction",
    "nlp",
    "ransomware",
    "security",
    "stemmer",
    "threat-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

# IMPORTANT — transformers upper bound:
# transformers >= 4.45 breaks sentence-transformers BERT model loading
# with NameError ('init_empty_weights'). Capped at <4.45 until upstream fix.
# Fix for existing installs: pip install "transformers==4.44.2" "sentence-transformers==3.0.1"
# accelerate is required — provides init_empty_weights used by sentence-transformers.
# transformers pinned >=4.53.0 clears all CVEs with available upstream fixes.
dependencies = [
    "sentence-transformers>=3.4.1,<4.0.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "transformers>=4.53.0,<5.0.0",
    "numpy>=1.26.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.11",
]

[project.scripts]
insight-extract = "insight_extractor.__main__:main"

[project.urls]
Homepage = "https://github.com/CGFixIT/insight-extractor"
Repository = "https://github.com/CGFixIT/insight-extractor"
Issues = "https://github.com/CGFixIT/insight-extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insight_extractor"]

[tool.hatch.build.targets.wheel.force-include]
"src/insight_extractor/py.typed" = "insight_extractor/py.typed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
